# nourish-chain-supper-club

./: .gitignore  Cargo.toml  LICENSE  README.md  TERMS.md
contracts/ink/: README.md
demo/: create_elxr.ps1  create_kombech.ps1  organize_full_project.ps1  package.json  prepare_github.ps1  push_all_files.ps1  push_nrsh_fixed.ps1  push_nrsh_to_github.ps1  push_source_files.ps1  push_to_repo.ps1  tailwind.config.js
demo/elxr_leptos/: Cargo.toml  README.md  nextjs_integration_example.jsx
demo/elxr_leptos/src/: additional_components.rs  lib.rs  main.rs
demo/kombech_leptos/: Cargo.toml  README.md  next.d.ts  tailwind.config.js
demo/kombech_leptos/src/: additional_components.rs  golden_theme.rs  js_types.rs  lib.rs  type_safe_components.rs
demo/pages/: dex.jsx  social.jsx
demo/social_leptos/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
demo/social_leptos/dex/: Cargo.toml
demo/social_leptos/dex/src/: lib.rs
demo/social_leptos/spirulina/: README.md
demo/social_leptos/src/: lib.rs  next_integration.rs  nextjs_bridge.rs  type_safe_components.rs
demo/styles/: globals.css
demo/web/: package.json  tailwind.config.js
demo/web/src/pages/: index.jsx  staking.jsx
docs/: bga-executive-summary.md  bga-presentation-deck.md  creator-royalty.txt  eigenlayer-royalty-research.md  elxr-figma-prototype.md  elxr-technical-whitepaper.md  fermentation-verification.txt  harvest-certification.txt  harvesting-makeup-mix-research.md  kombucha-registry.txt  nrsh-figma-prototype.md  nrsh-technical-whitepaper.md  nutrient-verification.txt  oracle-price-determination.md  physical-asset-delivery.txt  polkadot-executive-summary.md  polkadot-presentation-deck.md  post-quantum-encryption-ron.md  product-processing.txt  project-overview.md  secure-key-management.txt  smart-contract-framework.md  supply-chain-tracking.txt  ui-visualization.txt  visual-infographics-documentation.md  warehouse-management.txt
pallets/liquidity-pool/: Cargo.toml
pallets/liquidity-pool/src/: lib.rs
runtime/: daemonless-oracle.rs  elxr-telemetry.rs  nrsh-telemetry.rs  parachain-integration.rs  permaweb-nft.rs  spirulina-registry.rs  unified-liquidity-pool.rs  zero-spread-dex.rs
