[package]
name = "nourish-eigenlayer"
version = "0.1.0"
description = "Eigenlayer integration for Nourish Chain DAO"
authors = ["Robert Patrick Campbell (Skhi Bridges)"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/skhibridges/Nourish-Eigenlayer"

[dependencies]
# Ethereum interactions
ethers = { version = "2.0", features = ["ws", "rustls"] }
# Substrate core
substrate-api-client = "0.16.0"
sp-core = "12.0"
sp-runtime = "12.0"
# Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3.28"
# Crypto
blake2 = "0.10.6"
sha3 = "0.10.8"
# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }

[workspace]
members = [
    "examples",
]
