[package]
name = "dex_leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = "0.4.8"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
